@@ -1,3 +1,10 @@
+2004-10-27  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b255
+
+	* New: Added resizeAllPhotos() to classes/Album.php
+	       Used in tweaked resize_photo.php. It has the possibility to do the resize recursive.
+
+	       Mostly done by Dell'Aiera Pol <dellaiera.pol@gmail.com>
+
 2004-10-26  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b254
 
 	* Change:  1.4.5 has been re-versioned to 1.5 due to the vast
